--- a/core/src/main/flex/org/dukecon/views/TracksView.mxml
+++ b/core/src/main/flex/org/dukecon/views/TracksView.mxml
@@ -12,7 +12,7 @@
     </fx:Metadata>
 
     <fx:Declarations>
-        <parsley:Configure/>
+        <parsley:FastInject injectionComplete="init();" property="conferenceController" type="{ConferenceController}" />
     </fx:Declarations>
 
     <fx:Script>
@@ -22,13 +22,6 @@
         import org.dukecon.controller.ConferenceController;
         import org.dukecon.events.ConferenceDataChangedEvent;
         import org.dukecon.events.ListEvent;
-        import org.spicefactory.lib.reflect.ClassInfo;
-        import org.spicefactory.parsley.core.context.Context;
-        import org.spicefactory.parsley.core.context.provider.Provider;
-        import org.spicefactory.parsley.core.messaging.MessageReceiverRegistry;
-        import org.spicefactory.parsley.core.scope.ScopeName;
-        import org.spicefactory.parsley.messaging.receiver.DefaultMessageHandler;
-        import org.spicefactory.parsley.messaging.receiver.MessageReceiverInfo;
 
         [Bindable]
         protected var listData:ArrayCollection;
@@ -36,20 +29,10 @@
         [Inject]
         public var conferenceController:ConferenceController;
 
-        [Inject]
-        public var context:Context;
-
         [Init]
         public function init():void {
             listData = conferenceController.tracks;
             list.addEventListener(ListEvent.ITEM_SELECTED, onTrackSelected);
-
-            var registry:MessageReceiverRegistry = context.scopeManager.getScope(ScopeName.GLOBAL).messageReceivers;
-            var info:MessageReceiverInfo = new MessageReceiverInfo();
-            info.type = ClassInfo.forClass(ConferenceDataChangedEvent);
-            var handler:DefaultMessageHandler = new DefaultMessageHandler(info);
-            handler.init(Provider.forInstance(this), ClassInfo.forInstance(this).getMethod("onConferenceDataChanged"));
-            registry.addTarget(handler);
         }
 
         [MessageHandler]
@@ -60,7 +43,6 @@
         protected function onTrackSelected(event:ListEvent):void {
             navigator.pushView(TrackView, event.data);
         }
-
         ]]>
     </fx:Script>
 
