--- a/core/src/main/flex/org/dukecon/itemrenderer/LocationItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/LocationItemRenderer.mxml
@@ -7,7 +7,7 @@
                 click="onItemClick(event)">
 
     <fx:Declarations>
-        <parsley:Configure/>
+        <parsley:FastInject property="locationController" type="{LocationController}" />
     </fx:Declarations>
 
     <fx:Script>
@@ -27,15 +27,24 @@
         [Inject]
         public var locationController:LocationController;
 
-        override protected function commitProperties():void {
-            super.commitProperties();
+        [Bindable("dataChange")]
+        override public function get data():Object {
+            return super.data;
+        }
 
+        override public function set data(value:Object):void {
+            super.data = value;
             location = Location(data);
-            if (location) {
+            update();
+        }
+
+        protected function update():void {
+            if (location && locationController) {
                 locationIcon = locationController.getIconForLocation(location.id);
-                locationName = location.names[resourceManager.localeChain[0]];
+                locationName = location.getName(resourceManager.localeChain[0]);
             } else {
                 locationIcon = null;
+                locationName = null;
             }
             itemLabel.width = this.parent.parent.width - 168;
 
@@ -45,6 +54,7 @@
         protected function onItemClick(event:MouseEvent):void {
             dispatchEvent(new ListEvent(data, ListEvent.ITEM_SELECTED));
         }
+
         ]]>
   </fx:Script>
 
