--- a/core/src/main/flex/org/dukecon/views/LocationView.mxml
+++ b/core/src/main/flex/org/dukecon/views/LocationView.mxml
@@ -14,7 +14,10 @@
     </fx:Metadata>
 
     <fx:Declarations>
-        <parsley:Configure/>
+        <parsley:FastInject>
+            <parsley:Inject property="conferenceController" type="{ConferenceController}" />
+            <parsley:Inject property="locationController" type="{LocationController}" />
+        </parsley:FastInject>
     </fx:Declarations>
 
     <fx:Script>
@@ -66,7 +69,7 @@
 
         protected function update():void {
             if(location && locationController && conferenceController) {
-                locationName = location.names[resourceManager.localeChain[0]];
+                locationName = location.getName(resourceManager.localeChain[0]);
                 locationIcon = locationController.getIconForLocation(location.id);
                 talks = conferenceController.getEventsForLocation(location);
             } else {
