--- a/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
+++ b/core/src/main/flex/org/dukecon/views/ScheduleView.mxml
@@ -12,7 +12,9 @@
     </fx:Metadata>
 
     <fx:Declarations>
-        <parsley:Configure/>
+        <parsley:FastInject injectionComplete="init();">
+            <parsley:Inject property="conferenceController" type="{ConferenceController}"/>
+        </parsley:FastInject>
     </fx:Declarations>
 
     <fx:Script>
@@ -22,13 +24,6 @@
         import org.dukecon.controller.ConferenceController;
         import org.dukecon.events.ConferenceDataChangedEvent;
         import org.dukecon.events.ListEvent;
-        import org.spicefactory.lib.reflect.ClassInfo;
-        import org.spicefactory.parsley.core.context.Context;
-        import org.spicefactory.parsley.core.context.provider.Provider;
-        import org.spicefactory.parsley.core.messaging.MessageReceiverRegistry;
-        import org.spicefactory.parsley.core.scope.ScopeName;
-        import org.spicefactory.parsley.messaging.receiver.DefaultMessageHandler;
-        import org.spicefactory.parsley.messaging.receiver.MessageReceiverInfo;
 
         [Bindable]
         protected var listData:ArrayCollection;
@@ -36,20 +31,10 @@
         [Inject]
         public var conferenceController:ConferenceController;
 
-        [Inject]
-        public var context:Context;
-
         [Init]
         public function init():void {
             listData = conferenceController.days;
             list.addEventListener(ListEvent.ITEM_SELECTED, onDaySelected);
-
-            var registry:MessageReceiverRegistry = context.scopeManager.getScope(ScopeName.GLOBAL).messageReceivers;
-            var info:MessageReceiverInfo = new MessageReceiverInfo();
-            info.type = ClassInfo.forClass(ConferenceDataChangedEvent);
-            var handler:DefaultMessageHandler = new DefaultMessageHandler(info);
-            handler.init(Provider.forInstance(this), ClassInfo.forInstance(this).getMethod("onConferenceDataChanged"));
-            registry.addTarget(handler);
         }
 
         [MessageHandler]
