--- a/keycloak/src/main/flex/org/jboss/keycloak/flex/view/KeycloakLoginView.mxml
+++ b/keycloak/src/main/flex/org/jboss/keycloak/flex/view/KeycloakLoginView.mxml
@@ -5,6 +5,10 @@
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark" creationComplete="onCreationComplete(event)">
 
+    <s:navigationContent>
+        <s:Button label="&lt;" click="navigator.popView()"/>
+    </s:navigationContent>
+
     <fx:Script><![CDATA[
         import mx.collections.ArrayCollection;
         import mx.events.FlexEvent;
