--- a/core/src/main/flex/org/dukecon/views/MainView.mxml
+++ b/core/src/main/flex/org/dukecon/views/MainView.mxml
@@ -60,8 +60,7 @@
   </fx:Script>
 
     <s:VGroup id="content" width="100%" height="100%" horizontalAlign="center">
-        <s:Image source="@Embed('/conference-logo.jpg')"
-                 width="100%" height="100%" scaleMode="letterbox"/>
+        <s:Image source="@Embed('/logo_javaland.gif')" scaleMode="letterbox"/>
         <s:VGroup height="100%" verticalAlign="middle">
             <s:Button id="refreshButton" label="{resourceManager.getString('dukecon', 'main.refresh')}"
                       click="onRefreshClicked(event)"/>
