--- a/core/src/main/flex/org/dukecon/itemrenderer/GridEventItemRenderer.mxml
+++ b/core/src/main/flex/org/dukecon/itemrenderer/GridEventItemRenderer.mxml
@@ -25,6 +25,12 @@
                              dateTimePattern="{resourceManager.getString('dukecon', 'dateTime.time')}"/>
     </fx:Declarations>
 
+    <s:states>
+        <s:State name="long"/>
+        <s:State name="normal"/>
+        <s:State name="short"/>
+    </s:states>
+
     <fx:Script>
     <![CDATA[
         import mx.collections.ArrayCollection;
@@ -105,6 +111,14 @@
         }
 
         protected function adjustSize():void {
+            var lengthInMinutes:Number = (event.end.time - event.start.time) / (1000 * 60);
+            if(lengthInMinutes < 40) {
+                currentState = "short";
+            } else if(length > 120) {
+                currentState = "long";
+            } else {
+                currentState = "normal";
+            }
             // Update the position of the item based on it's data.
             x = (event.start.time - startTime) / 4000;
             y = locationIds.getItemIndex(event.locationId) * 394;
@@ -187,8 +201,8 @@
     </s:Rect>
 
     <s:VGroup top="20" left="20" right="20" bottom="20" gap="20" click="onMoreClicked(event)">
-        <s:Label text="{event.title}" width="480" height="100" styleName="talkTitle"/>
-        <s:Label id="speakersLabel" text="{speakerNames}" width="480" height="56" styleName="talkSpeakers"/>
+        <s:Label text="{event.title}" width="{this.width - 120}" height="100" styleName="talkTitle"/>
+        <s:Label id="speakersLabel" text="{speakerNames}" width="{this.width - 20}" height="56" styleName="talkSpeakers"/>
         <s:VGroup width="100%" gap="10">
             <s:HGroup width="100%" gap="20" verticalAlign="middle">
                 <s:Image source="@Embed('/clock.png')" visible="{event != null}" width="32" height="32"/>
