--- a/core/src/main/flex/DukeConApplication.mxml
+++ b/core/src/main/flex/DukeConApplication.mxml
@@ -14,6 +14,9 @@
     <fx:Script>
         <![CDATA[
         import mx.events.FlexEvent;
+        import mx.logging.Log;
+        import mx.logging.LogEventLevel;
+        import mx.logging.targets.TraceTarget;
 
         import org.dukecon.controller.SettingsController;
         import org.dukecon.views.SettingsView;
@@ -23,7 +26,25 @@
         public var settingsController:SettingsController;
 
         protected function onPreinitialize(event:FlexEvent):void {
+            initLogging();
             FlexContextBuilder.build(DukeConContext, this);
+        }
+
+        private function initLogging():void {
+            // Create a target.
+            var logTarget:TraceTarget = new TraceTarget();
+
+            // Set the log level.
+            logTarget.level = LogEventLevel.INFO;
+
+            // Add date, time, category, and log level to the output.
+            logTarget.includeDate = true;
+            logTarget.includeTime = true;
+            logTarget.includeCategory = true;
+            logTarget.includeLevel = true;
+
+            // Begin logging.
+            Log.addTarget(logTarget);
         }
 
         override protected function commitProperties():void {
